Improve README, tidy up printing

--- a/README
+++ b/README
@@ -11,3 +11,10 @@ Why? I've seen a lot of debate about whether models can have original insights, 
 In order to correctly model the universe, the model must
 - Remember the types of objects and their characteristics and the verbs they can receive and perform: in short, it must build a world model.
 - Deduce the causal relations that characterize this universe [TODO why].
+
+## Running
+
+- Ensure you have numpy in your environment, or create a conda environment from the config with `conda env create -f environment.yml`.
+- `python system.py` will open a Python REPL in the context of the system. You can do `system = run()` to generate a system and print the initial prompt to the model, including a list of available objects. You can then try out the module's various functions on that system.
+
+Be aware that this is very much a WIP!
